z-index nav link fix

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body{
 /* Link fixo lateral */
 .links-fix{
     position: fixed;
+    z-index: 10;
     bottom: 50px;
     left: 0;
 }
